# passer

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.circleci/: config.yml
src/: .lib.rs.swp  .user.rs.swp  client.rs  doc.rs  error.rs  group.rs  lib.rs  parameters.rs  repo.rs  request.rs  result.rs  user.rs
src/doc/: doc.rs  entity.rs  mod.rs  parameters.rs
src/group/: .mod.rs.swp  entity.rs  group.rs  mod.rs  parameters.rs
src/repo/: entity.rs  mod.rs  parameters.rs  repo.rs
src/user/: entity.rs  mod.rs  user.rs
