[package]
name = "passer"
version = "0.1.0"
authors = ["xiashuangxi <xiashuangxi@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
# rustc-serialize = "^0.3"
